--- a/index.html
+++ b/index.html
@@ -22,39 +22,41 @@
 
 
     <section class="writing">
-<div class="container grid-3">
-</div>
-<div>
-    <i class="fab fa-youtube fa-3x"></i>
-    <h3>yutube</h3>
-    <p>beschreibung nnn nnn mmm </p>
-</div>
-<div>
-    <i class="fas fa-asterisk fa-3x"></i>
-    <h3>asterisk</h3>
-    <p>beschreibung nnn nnn mmm </p>
-</div>
-<div>
-    <i class="fas fa-book-open fa-3x"></i>
-    <h3>book</h3>
-    <p>beschreibung nnn nnn mmm </p>
-</div>
-    </section>
+    <div class="container grid-3 center">
+      <div>
+        <i class="fas fa-asterisk fa-3x"></i>
+        <h3>Stuff</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
+      </div>
+      <div>
+        <i class="fas fa-book-open fa-3x"></i>
+        <h3>Beta Leser</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
+      </div>
+      <div>
+        <i class="fas fa-briefcase fa-3x"></i>
+        <h3>Freelancing Projects</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
+      </div>
+    </div>
+  </section>
 
-    <section class="about">
-<div class="container">
-    <div class="container grid-2">
-    <div class="center">
-        <i class="fas fa-book-reader fa-5x"></i>
-        <div>
-            <h3>About</h3>
-            <p>lorem 40x</p>
+  <!-- About -->
+  <section class="about bg-light">
+    <div class="container">
+      <div class="grid-2">
+        <div class="center">
+          <i class="fas fa-laptop-code fa-10x"></i>
         </div>
+        <div>
+          <h3>About Us</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non eos aperiam labore consectetur maiores ea magni exercitationem
+            similique laborum sed, unde, autem vel iure doloribus aliquid. Aspernatur explicabo consectetur consequatur non
+            nesciunt debitis quos alias soluta, ratione, ipsa officia reiciendis.</p>
+        </div>
+      </div>
     </div>
-    </div>
-</div>
-    </section>
-
+  </section>
     <footer class="center">
         <P>Björn M. Kuss &copy; 2020</P>
 
