--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
     <section class="writing">
     <div class="container grid-3 center">
       <div>
-        <i class="fas fa-asterisk fa-3x"></i>
-        <h3>Stuff</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
-      </div>
-      <div>
-        <i class="fas fa-book-open fa-3x"></i>
+        <i class="fas fa-book-reader fa-3x"></i>
         <h3>Beta Leser</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
       </div>
       <div>
-        <i class="fas fa-briefcase fa-3x"></i>
-        <h3>Freelancing Projects</h3>
+        <i class="fas fa-book-open fa-3x"></i>
+        <h3>Leseproben</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
+      </div>
+      <div>
+        <i class="fas fa-blog fa-3x"></i>
+        <h3>Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
       </div>
     </div>
@@ -46,10 +46,10 @@
     <div class="container">
       <div class="grid-2">
         <div class="center">
-          <i class="fas fa-laptop-code fa-10x"></i>
+          <i class="fas fa-address-card fa-10x"></i>
         </div>
         <div>
-          <h3>About Us</h3>
+          <h3>About me</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non eos aperiam labore consectetur maiores ea magni exercitationem
             similique laborum sed, unde, autem vel iure doloribus aliquid. Aspernatur explicabo consectetur consequatur non
             nesciunt debitis quos alias soluta, ratione, ipsa officia reiciendis.</p>
